# markdown-reader

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  CONTRIBUTORS.md  ENHANCEMENTS.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  LICENSE.md  PKGBUILD  PrepareForMacUser.md  README copy.MD  README.MD  README.md  README_REFACTORING.md  app.py  icon.icns  index.html  markdown-reader-backend.spec  markdown_reader.py  mkdocs.yml  preview.html  pyproject.toml  recent_files.py  requirements.txt  setup.py  task.md  test_features.py  word_count_bar.py
.github/: CODEOWNERS
.github/workflows/: add-contributor.yml  deploy-distribution.yml  deploy-docs.yml  python-ci.yml  release.yml
MathRenderingTestFile/: index.html
PrepareForMacUser/: index.html
PrepareForWindowsUser/: index.html
backend/: main.py  render_helpers.py  renderer.py  word_count.py
backend/routers/: ai.py  export.py  files.py  markdown.py
distribution/: index.html  scripts.js  styles.css
doc/: MathRenderingTestFile.md  requirements.txt
doc/docling/: DOCLING_EVALUATION_REPORT.md  DOCLING_IMAGE_FIX.md  DOCLING_QUICK_START.md  FILE_MANIFEST.txt  IMPLEMENTATION_SUMMARY.md  PDF_CONVERSION_MODES.md  QUICK_START_PDF_MODES.md  README_DOCLING_TEST.md  VERIFICATION_REPORT.md  docling_integration.py  test_docling.py  test_sample_converted.md
docs/: HostingStrategy.md  PrepareForMacUser.md  PrepareForWindowsUser.md  index.md
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AIPanel.tsx  EditorPane.tsx  MenuBar.tsx  PreviewPane.tsx  RecentFilesMenu.tsx  SplitPane.tsx  StatusBar.tsx  TabBar.tsx  Toolbar.tsx
frontend/src/hooks/: useAIChat.ts  useEditor.ts
frontend/src/lib/: api.ts  keyboardShortcuts.ts
markdown_reader/: file_handler.py  logic.py  preview.html  recent_files.py  ui copy.py  ui.py  utils.py  word_count_bar.py
markdown_reader/plugins/: docx_exporter.py  pdf_exporter.py
scripts/: ProjectPlan.md  create_skills_menu_tasks.py  dev-tauri.sh  dev.sh  how-to-refactory-my-markdown-project.md  package-macos-release.sh
search/: search_index.json
tests/: test_ai_agent_selection_only_integration.py  test_ai_agent_ui_helpers.py  test_ai_automation_logic.py  test_ai_provider_config_logic.py  test_features.py  test_markdown_outline.py
