[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-reader"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    # --- Core markdown / conversion ---
    "markdown>=3.5.0",
    "markdown2>=2.4.0",
    "html2text>=2020.1.16",
    "python-docx>=1.1.0",
    "pygments",
    "pypdf>=4.0.0",
    "PyMuPDF>=1.23.0",
    "weasyprint>=62.0",
    "requests>=2.28.0",
    "keyring>=25.0.0",
    "docling",
    # --- FastAPI backend (new architecture) ---
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    # --- Legacy tkinter UI (kept for reference / fallback) ---
    "watchdog",
    "ttkbootstrap",
    "py2app>=0.28; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
]
dev = [
    "ruff>=0.9",
    "ty>=0.0.29",
    "pre-commit>=3.0",
    "httpx>=0.27.0",   # for FastAPI TestClient
    "pytest>=8.0",
]

[project.scripts]
# Start the FastAPI backend
markdown-reader-backend = "backend.main:main"

[tool.uv]
# This is an application, not an installable library.
package = false

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
# E/W: pycodestyle  F: pyflakes  I: isort  UP: pyupgrade
select = ["E", "F", "I", "UP", "W"]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
# ttkbootstrap is designed to be used with star imports for its style constants
"app.py" = ["F403", "F405"]
"markdown_reader/ui.py" = ["F403", "F405"]
# sys.setrecursionlimit() must run before importing setuptools (see comment in file)
"setup.py" = ["E402"]
# Backend routers use sys.path manipulation for standalone import compatibility
"backend/**" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["markdown_reader"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyinstaller>=6.20.0",
]
# ty is Astral's type checker (https://github.com/astral-sh/ty).
# Configuration will grow as the project adopts type annotations.
